fixed some spacing issues

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -22,14 +22,13 @@ iframe {
   height: width * 0.609375;
 }
 .buttons-list {
-  width: 100%;
-  margin: 10px;
-  padding: 40px 50px;
+  margin: 0 auto;
+  padding: 20px 40%;
   background: #f2f2f2;
-  height: 100%;
   display: flex;
+  justify-content: space-around;
+  text-align: center;
   align-items: center;
-  justify-content: center;
 }
 
 a:hover,
